--- a/config.ini
+++ b/config.ini
@@ -3,11 +3,14 @@
 USERAGENT = IR UW24 40391409
 
 [CONNECTION]
-HOST = styx.ics.uci.edu
-PORT = 9000
+# HOST = styx.ics.uci.edu
+# PORT = 9000
+HOST = localhost
+PORT = 80
 
 [CRAWLER]
-SEEDURL = https://www.ics.uci.edu,https://www.cs.uci.edu,https://www.informatics.uci.edu,https://www.stat.uci.edu
+# SEEDURL = https://www.ics.uci.edu,https://www.cs.uci.edu,https://www.informatics.uci.edu,https://www.stat.uci.edu
+SEEDURL = http://localhost/mediawiki/index.php/Fantastic_Beasts:_The_Secrets_of_Dumbledore
 # In seconds
 POLITENESS = 0.5
 
